--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Page title</title>
-    </head>
-<body>
-
-    <h1>Braida Matteo</h1>
-    <p>Questo è un paragrafo</p>
-    <img src="img/71Ez0dzAxvL.webp" height="500"/>
-
-</body>
+  <head>
+    <title>Index</title>
+  </head>
+  <body>
+    <h1>Index</h1>
+    <p><a href="Contatti.html">Contatti</a></p>
+    <img src="img/71Ez0dzAxvL.webp" height="500" />
+  </body>
 </html>
