Esercizi html fino al 4.4

--- a/HTML/Esercizio4.2.html
+++ b/HTML/Esercizio4.2.html
@@ -12,25 +12,57 @@
         align-items: center;
       "
     >
-      <div style="margin: 20px">
+      <h1>Galleria di Immagini</h1>
+      <div style="margin: 20px; text-align: center">
         <img src="https://picsum.photos/id/1/300" alt="img1" />
-        <div style="text-align: center; padding: 250px">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate
-            natus iure atque fugit possimus quaerat, ex iste ut voluptas odio
-            magnam itaque officiis suscipit blanditiis quae minima laudantium
-            est vero.
-          </p>
-        </div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate
+          natus iure atque fugit possimus quaerat, ex iste ut voluptas odio
+          magnam itaque officiis suscipit blanditiis quae minima laudantium est
+          vero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
+          minus voluptate pariatur nostrum laudantium officiis est deleniti
+          vero! Quam consequatur tenetur cumque mollitia quas repellendus! Amet
+          tempore velit voluptatibus iste?
+        </p>
       </div>
-      <div>
+      <div style="margin: 20px; text-align: center">
         <img src="https://picsum.photos/id/50/300" alt="img2" />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
+          dolorem aliquid voluptate enim deleniti atque eveniet quidem, beatae
+          autem itaque delectus, omnis soluta consequuntur, vero praesentium
+          similique debitis quisquam pariatur! Lorem ipsum dolor sit amet
+          consectetur adipisicing elit. Iure ratione distinctio alias assumenda,
+          corrupti quidem minus, magnam at illum architecto, quae porro quis cum
+          eos. Ipsum libero dolores expedita illo?
+        </p>
       </div>
-      <div>
+      <div style="margin: 20px; text-align: center">
         <img src="https://picsum.photos/id/30/300" alt="img3" />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+          nostrum, modi, magnam, reiciendis cumque laboriosam voluptates
+          perferendis corporis officiis maiores doloremque! Quisquam blanditiis,
+          ab cumque laboriosam magnam repellendus quas! Lorem ipsum dolor sit
+          amet consectetur adipisicing elit. Quisquam, nostrum modi magnam
+          reiciendis cumque laboriosam voluptates perferendis corporis officiis
+          maiores doloremque! Quisquam blanditiis, ab cumque laboriosam magnam
+          repellendus quas!
+        </p>
       </div>
-      <div>
+      <div style="margin: 20px; text-align: center">
         <img src="https://picsum.photos/id/20/300" alt="img4" />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
+          maiores, magnam, at cumque quos officiis beatae doloribus perferendis
+          possimus reprehenderit aliquid! Quisquam, nostrum modi magnam
+          reiciendis cumque laboriosam voluptates perferendis corporis officiis
+          maiores doloremque! Quisquam blanditiis, ab cumque laboriosam magnam
+          repellendus quas! Lorem ipsum dolor sit amet consectetur adipisicing
+          elit. Ducimus soluta est ea, fugit similique laborum pariatur qui
+          dolor voluptas cupiditate corrupti repellendus doloremque placeat odit
+          expedita iusto rerum rem corporis!
+        </p>
       </div>
     </div>
   </body>
