--- a/HTML/Esercizio6-1.html
+++ b/HTML/Esercizio6-1.html
@@ -45,7 +45,7 @@
         corporis optio deserunt?
       </p>
     </main>
-    <footer>
+    <footer style="margin-bottom: 20px;">
       <p>© Matteo Braida 2026. All rights reserved</p>
       <div style="display: flex; gap: 20px">
         <a href="">Privacy policy</a>
