--- a/Flexbox/Esercizio3-11.html
+++ b/Flexbox/Esercizio3-11.html
@@ -16,7 +16,7 @@
       </p>
       <button>Aggiungi al carrello</button>
     </div>
-    <div class="card">
+    <div class="card highlighted">
       <h3>Titolo</h3>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ad ut
