--- a/Flexbox/Esercizio8-4.html
+++ b/Flexbox/Esercizio8-4.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="Esercizio7-3.CSS" />
+    <link rel="stylesheet" href="Esercizio8-4.CSS" />
     <title>Document</title>
   </head>
   <body>
@@ -11,8 +11,7 @@
       <div class="item">1</div>
       <div class="item">2</div>
       <div class="item">3</div>
-      <div class="item" id="centrato">4</div>
-      <div class="item" id="destra">5</div>
+      <div class="item">4</div>
     </div>
   </body>
 </html>
