--- a/Esercizi Responsive/Esercizio3-4.html
+++ b/Esercizi Responsive/Esercizio3-4.html
@@ -9,7 +9,17 @@
   <body>
     <div class="container">
       <div class="header">
-        <header>Header</header>
+        <header>
+          <div class="logo">
+            <img src="logo.png" alt="logo" width="100px" height="30px" />
+          </div>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Articoli</a></li>
+            <li><a href="#">Contatti</a></li>
+            <li><a href="#">About</a></li>
+          </ul>
+        </header>
       </div>
       <div class="main">
         <aside>Sidebar</aside>
